--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/benjaminvella/ps8#readme",
   "dependencies": {
+    "mongodb": "5.0",
     "socket.io": "^4.5.4"
   }
 }
