--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.0",
+    "mongodb": "5.0",
     "nodemon": "^2.0.20",
     "socket.io": "^4.5.4",
     "uuid": "^9.0.0"
