--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
 version: '3'
 services:
+  app:
+    build: .
+    ports:
+      - 3000:3000
   db:
     image: mongo
     ports:
-      - "27017:27017"
-  nodejs:
-    build: .
-    ports:
-      - "3000:3000"
+      - 27017:27017
