--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "homepage": "https://github.com/benjaminvella/ps8#readme",
   "dependencies": {
     "mongodb": "5.0",
-    "socket.io": "^4.5.4"
+    "socket.io": "^4.5.4",
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.0",
     "mongodb": "5.0",
