--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,19 @@ services:
     build: .
     ports:
       - 3000:3000
-  db:
+    environment:
+      MONGO_URI: mongodb://mongodb:27017/
+    depends_on:
+      - mongodb
+  mongodb:
     image: mongo
     ports:
-      - 27017:27017
+      - "27017:27017"
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: admin
+      MONGO_INITDB_ROOT_PASSWORD: admin
+
+    volumes:
+      - mongodb:/data/db
+volumes:
+    mongodb : { }
