--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
     environment:
       MONGO_INITDB_ROOT_USERNAME: admin
       MONGO_INITDB_ROOT_PASSWORD: admin
-
+    command: mongod --quiet --logpath /dev/null 
     volumes:
       - mongodb:/data/db
 volumes:
