--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./back/index.js"
+    "start": "pm2 start ./back/index.js --name connect4 && pm2 logs connect4"
   },
   "repository": {
     "type": "git",
@@ -19,11 +19,12 @@
   },
   "homepage": "https://github.com/benjaminvella/ps8#readme",
   "dependencies": {
-    "mongodb": "5.0",
-    "socket.io": "^4.5.4",
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.0",
+    "mongodb": "5.0",
     "nodemon": "^2.0.20",
+    "pm2": "^5.3.0",
+    "socket.io": "^4.5.4",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
