--- a/cordova/package.json
+++ b/cordova/package.json
@@ -18,7 +18,8 @@
     "cordova-plugin-cleartext": "^1.0.0",
     "cordova-plugin-geolocation": "^4.1.0",
     "cordova-plugin-splashscreen": "^6.0.2",
-    "cordova-plugin-statusbar": "^3.0.0"
+    "cordova-plugin-statusbar": "^3.0.0",
+    "cordova-plugin-vibration": "^3.1.1"
   },
   "cordova": {
     "platforms": [
@@ -31,7 +32,8 @@
       "cordova-plugin-geolocation": {
         "GPS_REQUIRED": "true"
       },
-      "cordova-plugin-cleartext": {}
+      "cordova-plugin-cleartext": {},
+      "cordova-plugin-vibration": {}
     }
   }
 }
