update : minor change

--- a/cordova/package.json
+++ b/cordova/package.json
@@ -16,10 +16,13 @@
     "cordova-android": "^10.1.2",
     "cordova-plugin-battery-status": "^2.0.3",
     "cordova-plugin-cleartext": "^1.0.0",
+    "cordova-plugin-dialogs": "^2.0.2",
     "cordova-plugin-geolocation": "^4.1.0",
+    "cordova-plugin-screen-orientation": "^3.0.3",
     "cordova-plugin-splashscreen": "^6.0.2",
     "cordova-plugin-statusbar": "^3.0.0",
-    "cordova-plugin-vibration": "^3.1.1"
+    "cordova-plugin-vibration": "^3.1.1",
+    "es6-promise-plugin": "^4.2.2"
   },
   "cordova": {
     "platforms": [
@@ -33,7 +36,9 @@
         "GPS_REQUIRED": "true"
       },
       "cordova-plugin-cleartext": {},
-      "cordova-plugin-vibration": {}
+      "cordova-plugin-vibration": {},
+      "cordova-plugin-screen-orientation": {},
+      "cordova-plugin-dialogs": {}
     }
   }
 }
