--- a/cordova/package.json
+++ b/cordova/package.json
@@ -14,10 +14,13 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "cordova-android": "^10.1.2",
+    "cordova-plugin-badge": "^0.8.9",
     "cordova-plugin-battery-status": "^2.0.3",
     "cordova-plugin-cleartext": "^1.0.0",
+    "cordova-plugin-device": "^2.1.0",
     "cordova-plugin-dialogs": "^2.0.2",
     "cordova-plugin-geolocation": "^4.1.0",
+    "cordova-plugin-local-notification": "^0.9.0-beta.2",
     "cordova-plugin-screen-orientation": "^3.0.3",
     "cordova-plugin-splashscreen": "^6.0.2",
     "cordova-plugin-statusbar": "^3.0.0",
@@ -38,7 +41,8 @@
       "cordova-plugin-cleartext": {},
       "cordova-plugin-vibration": {},
       "cordova-plugin-screen-orientation": {},
-      "cordova-plugin-dialogs": {}
+      "cordova-plugin-dialogs": {},
+      "cordova-plugin-local-notification": {}
     }
   }
 }
