--- a/cordova/package.json
+++ b/cordova/package.json
@@ -14,6 +14,7 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "cordova-android": "^10.1.2",
+    "cordova-plugin-androidx-adapter": "^1.1.3",
     "cordova-plugin-badge": "^0.8.9",
     "cordova-plugin-battery-status": "^2.0.3",
     "cordova-plugin-cleartext": "^1.0.0",
@@ -42,7 +43,8 @@
       "cordova-plugin-vibration": {},
       "cordova-plugin-screen-orientation": {},
       "cordova-plugin-dialogs": {},
-      "cordova-plugin-local-notification": {}
+      "cordova-plugin-local-notification": {},
+      "cordova-plugin-androidx-adapter": {}
     }
   }
 }
