--- a/cordova/package.json
+++ b/cordova/package.json
@@ -20,8 +20,11 @@
     "cordova-plugin-cleartext": "^1.0.0",
     "cordova-plugin-device": "^2.1.0",
     "cordova-plugin-dialogs": "^2.0.2",
+    "cordova-plugin-file": "^7.0.0",
     "cordova-plugin-geolocation": "^4.1.0",
     "cordova-plugin-local-notification": "^0.9.0-beta.2",
+    "cordova-plugin-media": "^6.1.0",
+    "cordova-plugin-network-information": "^3.0.0",
     "cordova-plugin-screen-orientation": "^3.0.3",
     "cordova-plugin-splashscreen": "^6.0.2",
     "cordova-plugin-statusbar": "^3.0.0",
@@ -44,7 +47,9 @@
       "cordova-plugin-screen-orientation": {},
       "cordova-plugin-dialogs": {},
       "cordova-plugin-local-notification": {},
-      "cordova-plugin-androidx-adapter": {}
+      "cordova-plugin-androidx-adapter": {},
+      "cordova-plugin-network-information": {},
+      "cordova-plugin-media": {}
     }
   }
 }
